# DuxNet

./: .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.gui  INTEGRATED_WALLET_CORE.md  LICENSE  MANIFEST.in  MULTI_CRYPTO_ESCROW_INTEGRATION.md  Makefile  README.md  RELEASE_v2.3.0.md  RELEASE_v2.3.1.md  RELEASE_v2.3.2.md  RELEASE_v2.3.3.md  RELEASE_v2.3.4.md  RELEASE_v2.3.5.md  RELEASE_v2.3.6.md  RELEASE_v2.3.7.md  RELEASE_v2.3.8.md  RELEASE_v2.3.9.md  RELEASE_v2.4.0.md  WINDOWS_SETUP.md  build_duxos_simple.sh  docker-compose.yml  dux  dux-registryd.service  duxnet_bitcoin_wallet.db  duxos_registry.db  escrow.db  health_monitor.py  health_monitor_gui.py  install.sh  integration_test_advanced.py  integration_test_desktop_advanced.py  integration_test_multi_crypto_escrow.py  mock_ethereum_server.py  mock_flopcoin_server.py  (+18 more)
.devcontainer/: Dockerfile  devcontainer.json
build_script/: build_duxos.sh
config/: binary  bootstrap
docs/: BUILD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  README.md  README_DUXNET_EXE.md  README_health_monitor.md  RELEASE_v2.2.2.md  THEME_CUSTOMIZATION.md  THEME_SUMMARY.md  VERIFICATION_SUMMARY.md  WALLET_CORE_ATTRIBUTION.md  WALLET_CORE_BUILD.md  api_reference.md  architecture.md  development_plan.md  phase_1_escrow_core_completion.md  phase_2_2_completion.md  phase_3_task_engine_completion.md  phase_4_store_completion.md  phase_5_desktop_integration_completion.md  requirements.txt  requirements_desktop.txt  wallet_integration.md
duxnet_daemon_template/: config.yaml  daemon.py
duxnet_desktop/: README.md  api_client.py  desktop_manager.py  models.py  wallet_client.py
duxnet_store/: api.py  (+5 more)
(+279 files in other folders)
